2002-07-03  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/copy/src/copy.c:
	oops - had typed sizeof(char*) rather than sizeof(char).

	* src/copy/src/copy.c:
	noticed that I didn't check if input stream was nonzero before trying to close it (fix)

	* src/copy/src/copy.c:
	workaround for a bug I noticed in mirroring across NFS - root's permissions
	let it open a file for input but not read from it.  So I check if I can
	read from the input before trying to open the output.

	* src/checkout/src/checkout.c: gcc warnings ('tell' was a variable)

	* src/link2rcs/src/link2rcs.c, src/permit/src/permit.c: gcc warnings

	* src/baseline/src/baseline.c, src/checkin/src/checkin.c, src/checkup/src/checkup.c:
	use UCH() to fix char-subscript warnings in gcc.

2002-06-29  Thomas E. Dickey  <dickey@invisible-island.net>

	* mkdirs.sh: resync with my-autoconf

2002-05-10  Thomas E. Dickey  <dickey@invisible-island.net>

	* aclocal.m4: resync with my-autoconf (fixes CF_HEADER_PATH)

	* src/checkup/src/checkup.c:
	"always" allow a 1-second difference so I can use this on VFAT volumes mounted
	from Linux

2002-05-01  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/checkup/src/checkup.c:
	fix for cygwin dates so I get checkup ignoring those off-by-one-second diffs

2001-12-11  Thomas E. Dickey  <dickey@invisible-island.net>

	* src/vcs/src/insert.c, src/vcs/src/vcs.c, src/permit/src/permit.c, src/link2rcs/src/link2rcs.c, src/checkup/src/checkup.c, src/checkout/src/rcsget.c, src/checkin/src/rcsput.c, src/checkin/src/checkin.c, src/baseline/src/baseline.c:
	change interface to rcs_dir()

2001-08-28  Thomas E. Dickey  <dickey@invisible-island.net>

	* aclocal.m4: small fixes for newer autoconf alpha's

	* src/copy/src/copy.c:
	for copying HUGE files (such as cdrom iso's), modified the -v behavior so
	it will show ongoing percentage complete

2001-06-22  Thomas E. Dickey  <dickey@clark.net>

	* install-sh: resync with my-autoconf
